# cwmp_listener

./: .env  Cargo.toml  README.md  cmd.sh
.github/workflows/: release.yaml
data/: re.xml
devops/: Dockerfile
src/: configuration.rs  logger.rs  main.rs
