[package]
name = "cwmp-listener"
description = "A simple, secure CWMP (TR-069) listener that monitors and logs incoming ACS (Auto Configuration Server) communications."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
base64 = "0.22.1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
